# edinburgh

./: .dockerignore  .env  Cargo.toml  README.md  build.rs  notes.md  roadmap.md  what-next.md
.github/workflows/: tier1.yml
docs/: prerequisites.md  roadmap.md
src/: airflow.rs  banner.rs  cli.rs  config.rs  driver.rs  error.rs  hal.rs  humidity.rs  lib.rs  main.rs  ndir.rs  pressure.rs  rs232.rs  sensor.rs  setting.rs  signal.rs  socket.rs  temperatures.rs  types.rs
src/experement/: args.rs  cli.rs  command.rs  config.rs
src/simulation/: mod.rs
