[package]
name = "sensors"
version = "0.1.0"
authors = ["Sascha Smolkov <sascha.smolkov@gmail.com>"]
edition = "2018"
description = "LAR sensors"
keywords = ["sensor","ndir","co2","airflow","humidity","pressure"]
categories = ["linux", "automatic", "sensor"]
repository = "https://github.com/lar-rs/sensors"
readme = "README.md"
license = "Apache-2.0 OR MIT"


[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lar-rs/sensors", branch = "master"}

# [features]
# default = ["onlinux"]
# onlinux = ["async-std","futures-preview","ansi_term"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paw = "1.0.0"
structopt = { version = "0.3.3", features = ["paw"] }
ansi_term = { version = "0.12.1", optional = true }
yansi = "0.5.0"

failure = "0.1.5"
# log
log = "0.4.8"
femme = "1.3.0"
# bigdecimal = { version = "0.1.0", features = ["serde"] }
# Serializer file format
serde_json = "1.0.40"
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"
bincode = "1.1.4"

#Time date
chrono = "0.4.9"
# Units
uom = { version = "0.25.0", default-features = false, features = ["autoconvert", "f32", "f64", "u64", "si", "std"] }

lazy_static = "1.4.0"
cfg-if = "0.1.9"
crossbeam = "0.7.2"
futures-timer = "1.0.2"
rand = "0.7.2"
pin-utils = "0.1.0-alpha.4"

# path-table = "1.0.0"
# nom = "5.0.1"
# bytes = "0.4.12"
# serial = "0.4.0"
# futures-preview = { version = "0.3.0-alpha.19", optional = true, features = [ "async-await"] }

[dependencies.async-std]
version = "0.99"
features = ["unstable"]

[build-dependencies]
autocfg = "0.1"
