[package]
name = "edinburgh"
version = "0.1.0"
authors = ["Sascha Smolkov <sascha.smolkov@gmail.com>"]
edition = "2018"
description = "LAR edinburgh sensors"
keywords = ["sensor","ndir","co2","airflow","humidity","pressure"]
categories = ["linux", "automatic", "sensor"]
repository = "https://github.com/lar-rs/sensors"
readme = "README.md"
license = "Apache-2.0 OR MIT"


[badges]
maintenance = { status = "experimental" }
travis-ci = { repository = "lar-rs/edinburg", branch = "master"}

[build-dependencies]
autocfg = "0.1"
# [features]
# default = ["onlinux"]
# onlinux = ["async-std","futures-preview","ansi_term"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byteorder = { version = "1", default-features = false }
num-traits = { version = "0.2", default-features = false }
doc-comment = "0.3"
embedded-hal = "0.2"
nb = "0.1"

[dev-dependencies]
embedded-hal-mock = "0.7"
linux-embedded-hal = { git = "https://github.com/rust-embedded/linux-embedded-hal" }
serial = "0.4"
